--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
             function yesClicked(){
                 document.body.innerHTML = `<div style="display:flex;justify-content:center;align-items:center;height:100vh;font-family: 'RusticRoadway', cursive;;color:white;text-align:center;">
                 <div>
-                    <h1>WOO!!!</h1>
+                    <h1>WOOOO!!!</h1>
                     <h2>I love you so much ❤️</h2>
+                    <h2>- ash </h2>
                 </div>
             </div>
             `;
@@ -204,7 +205,7 @@
         setInterval(() => {
             const heart = document.createElement("div");
             heart.classList.add("heart");
-            heart.innerHTML = "❤️";
+            heart.innerHTML = "hello";
             heart.style.left = Math.random() * window.innerWidth + "px";
             heart.style.fontSize = (Math.random() * 20 + 10) + "px";
             document.body.appendChild(heart);
@@ -218,4 +219,5 @@
         </script>
 
     </body>
+
     </html>
