--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         setInterval(() => {
             const heart = document.createElement("div");
             heart.classList.add("heart");
-            heart.innerHTML = "hello";
+            heart.innerHTML = "❤️";
             heart.style.left = Math.random() * window.innerWidth + "px";
             heart.style.fontSize = (Math.random() * 20 + 10) + "px";
             document.body.appendChild(heart);
@@ -221,3 +221,4 @@
     </body>
 
     </html>
+
