--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Will you be my Valentine's?</title>
+        <title>Sex?</title>
 
         <style>
             
@@ -205,7 +205,7 @@
         setInterval(() => {
             const heart = document.createElement("div");
             heart.classList.add("heart");
-            heart.innerHTML = "❤️";
+            heart.innerHTML = "FUCK ME";
             heart.style.left = Math.random() * window.innerWidth + "px";
             heart.style.fontSize = (Math.random() * 20 + 10) + "px";
             document.body.appendChild(heart);
@@ -221,4 +221,5 @@
     </body>
 
     </html>
+
 
