--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
         
         <div class="card" id="card">
-            <h1>Will you be my Valentine?</h1>
+            <h1>Sex?</h1>
             <button id="yes" onclick="yesClicked()">Duh</button>
             <button id="duh" onmouseover="moveButton(this)">Yes</button>
             <button id="no" onmouseover="moveButton(this)">No</button>
@@ -221,5 +221,6 @@
     </body>
 
     </html>
+
 
 
