--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sex?</title>
+        <title>Will You Be My Valentine??</title>
 
         <style>
             
@@ -137,7 +137,7 @@
         </div>
         
         <div class="card" id="card">
-            <h1>Sex?</h1>
+            <h1>Will You Be My Valentine??</h1>
             <button id="yes" onclick="yesClicked()">Duh</button>
             <button id="duh" onmouseover="moveButton(this)">Yes</button>
             <button id="no" onmouseover="moveButton(this)">No</button>
@@ -205,7 +205,7 @@
         setInterval(() => {
             const heart = document.createElement("div");
             heart.classList.add("heart");
-            heart.innerHTML = "FUCK ME";
+            heart.innerHTML = "❤️";
             heart.style.left = Math.random() * window.innerWidth + "px";
             heart.style.fontSize = (Math.random() * 20 + 10) + "px";
             document.body.appendChild(heart);
@@ -221,6 +221,7 @@
     </body>
 
     </html>
+
 
 
 
